--- a/01_agama/samyukta/03/SA3_7.md
+++ b/01_agama/samyukta/03/SA3_7.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 3. Dependent Origination | 7 (289). Untaught'
 type: kramdown
 base: ../../../
 previous: SA3_6.html
-next: SA3_26.html
+next: SA3_8.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
@@ -12,18 +12,18 @@ next: SA3_26.html
 
 <table class="trans">
   <th class='ch'>(二八九) 無聞</th>
-  <th class='en'>7 (289). Untaught</th>
+  <th class='en'>7 (289). Unlearned</th>
   <tr>
     <td class="ch" title='t99.2.81c4'>如是我聞： 一時，佛住王舍城、迦蘭陀竹園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Karandaka Bamboo Park of Rājagṛha.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.81c5'>爾時，世尊告諸比丘： 「愚癡、無聞凡夫於四大身厭患，離欲，背捨而非識。 所以者何？ 見四大身有增、有減、有取、有捨，而於心、意、識，愚癡無聞凡夫不能生厭、離欲、解脫。 所以者何？ 彼長夜於此保，惜，繫我。 若得、若取，言： 『是我、我所、相在。』 是故，愚癡、無聞凡夫不能於彼生厭、離欲、背捨。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Foolish, untaught, ordinary men become disillusioned with, free of desire for, and abandon the body of the four basic elements but not awareness. Why is that? They see that the body of the four basic elements has its increase, decrease, acquisition, and loss, but an foolish, untaught ordinary man is unable to become disillusioned with, free of desire for, or be liberated from the heart, mind, and awareness. Why is that? They’ve protected, valued, and tied themselves to it for a long night. Whether ascertained or grasped, they say: ‘This is me, it belongs to me, and both is present in the other.’ Therefore, a foolish, untaught ordinary man is unable to become disillusioned with, free desire of, and abandon it.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Foolish, unlearned ordinary men become disillusioned with, free of desire for, and abandon the body of the four basic elements but not awareness. Why is that? They see that the body of the four basic elements has its increase, decrease, acquisition, and loss, but an foolish, unlearned ordinary man is unable to become disillusioned with, free of desire for, or be liberated from the heart, mind, and awareness. Why is that? They’ve protected, valued, and tied themselves to it for a long night. Whether ascertained or grasped, they say: ‘This is me, it belongs to me, and both is present in the other.’ Therefore, a foolish, unlearned ordinary man is unable to become disillusioned with, free desire of, and abandon it.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.81c11'>「愚癡、無聞凡夫寧於四大身繫我、我所，不可於識繫我、我所。 所以者何？ 四大色身或見十年住⋯二十⋯三十⋯乃至⋯百年，若善消息、或復小過。 彼心、意、識日夜時刻，須臾轉變，異生、異滅。 猶如獼猴遊林樹間，須臾處處。 攀捉枝條，放一、取一。 彼心、意、識亦復如是，異生、異滅。</td>
-    <td id='p3'>3. “A foolish, untaught ordinary man should rather tie himself and what belongs to himself to the body of the four basic elements and not tie himself and what belongs to himself to awareness. Why is that? He might observe the form body of four basic elements lasting ten … twenty … thirty … or a hundred years, whether it’s a good time or he makes some minor mistakes. His heart, mind, and awareness changes with each moment during day and night, arising as one thing and perishing as another. It’s like a monkey wandering in a forest, staying momentarily in place or another. It climbs on branches and twigs, releasing one and grasping another. That man’s heart, mind, and awareness are likewise, arising as one thing and perishing as another.</td>
+    <td id='p3'>3. “A foolish, unlearned ordinary man should rather tie himself and what belongs to himself to the body of the four basic elements and not tie himself and what belongs to himself to awareness. Why is that? He might observe the form body of four basic elements lasting ten … twenty … thirty … or a hundred years, whether it’s a good time or he makes some minor mistakes. His heart, mind, and awareness changes with each moment during day and night, arising as one thing and perishing as another. It’s like a monkey wandering in a forest, staying momentarily in place or another. It climbs on branches and twigs, releasing one and grasping another. That man’s heart, mind, and awareness are likewise, arising as one thing and perishing as another.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.81c17'>「多聞、聖弟子於諸緣起善思惟觀察。 所謂樂觸緣生樂受。 樂受覺時，如實知樂受覺。 彼樂觸滅，樂觸因緣生受亦滅、止、清涼、息、沒。 如樂受，苦觸⋯喜觸⋯憂觸⋯捨觸因緣生捨受。 捨受覺時，如實知捨受覺。 彼捨觸滅，彼捨觸因緣生捨受亦滅、止、清涼、息、沒。</td>
