Added chapter 36 of T211 (DA 2 parallel)

--- a/02_avadana/dharmapada/T211/T211c1v4-6.md
+++ b/02_avadana/dharmapada/T211/T211c1v4-6.md
@@ -4,7 +4,7 @@ title: 'Dharma Verse Stories | Chapter 1: Impermanence | 3. Like Cattle Led to T
 type: kramdown
 base: ../../../
 previous: T211c1v3.html
-next: index.html
+next: T211c36v1.html
 ---
 
 # [Dharma Verse Stories](index.html)
