--- a/02_avadana/dharmapada/T211/T211c36v1.md
+++ b/02_avadana/dharmapada/T211/T211c36v1.md
@@ -62,7 +62,7 @@ next: index.html
   </tr>
   <tr>
     <td class='ch' title='t211.4.605b23'>佛言： 「越祇國人數相聚會，講議正法，修福自守。 以此為常，是謂為一。 越祇國人君臣常和。 所任忠良，教諫承用，不相違戾。 是謂為二。 越祇國人奉法，相率無取無捨。 不敢犯過上下循常。 是謂為三。 越祇國人禮化謹敬，男女有別長幼相承不失儀法。 是謂為四。 越祇國人孝養父母遜悌師長。 受誡教誨以為國則。 是謂為五。 越祇國人承天則地。 敬畏社稷，奉順四時，民農不廢。 是謂為六。 越祇國人尊道敬德。 國有沙門得道應真方遠來者，供養衣被床臥醫藥。 是謂為七。 夫為國主行此七法難可得危。 極天下兵共往攻之不能得勝。」</td>
-    <td id='p9'>9. The Buddha said, “The people of Vṛji hold frequent meetings to discuss the proper Dharma and make defensive plans to safeguard themselves. This custom of theirs is the first thing. The people of Vṛji and their nobles and ministers are always in harmony. They are good and loyal, put instructions and advice into practice, and they don’t oppose each other. This is the second thing. The people of Vṛji accept the Dharma and follow each other without any disharmony.<sup id="ref3"><a href="#n3">3</a></sup> They dare not violate the customs of high and low positions. This is the third thing. The people of Vṛji are polite and respectful. Men and women have their separate relations between elders and youths, which they accept without forgetting their rules of propriety. This is the fourth thing. The people of Vṛji support their parents and obey their teachers. They accept the instructions and admonitions of their country’s laws. This is the fifth thing. The people of Vṛji accept the heavenly laws on earth. They respect and fear the gods of soil and grain and accomodate the four seasons so that their farmers won’t be ruined. This is the sixth thing. The people of Vṛji respect the virtue of their sages. That country has ascetics who’ve attained awakening and went there from far away to receive support, clothing, bedding, and medicines. This is the seventh thing. The men who are the chiefs of that country put these seven things into practice, which will make it difficult to harm them. The best armies in the world could go and do battle with them, but they wouldn’t be unable to defeat them.”<sup id="ref4"><a href="#n4">4</a></sup></td>
+    <td id='p9'>9. The Buddha said, “The people of Vṛji hold frequent meetings to discuss the proper Dharma and make defensive plans to safeguard themselves. This custom of theirs is the first thing. The people of Vṛji and their nobles and ministers are always in harmony. They are good and loyal, put instructions and advice into practice, and they don’t oppose each other. This is the second thing. The people of Vṛji accept the Dharma and follow each other without any disharmony.<sup id="ref3"><a href="#n3">3</a></sup> They dare not violate the customs of high and low positions. This is the third thing. The people of Vṛji are polite and respectful. Men and women have their separate relations between elders and youths, which they accept without forgetting their rules of propriety. This is the fourth thing. The people of Vṛji support their parents and obey their teachers. They accept the instructions and admonitions of their country’s laws. This is the fifth thing. The people of Vṛji accept the heavenly laws on earth. They respect and fear the gods of soil and grain and accommodate the four seasons so that their farmers won’t be ruined. This is the sixth thing. The people of Vṛji respect the virtue of their sages. That country has ascetics who’ve attained awakening and went there from far away to receive support, clothing, bedding, and medicines. This is the seventh thing. The men who are the chiefs of that country put these seven things into practice, which will make it difficult to harm them. The best armies in the world could go and do battle with them, but they wouldn’t be unable to defeat them.”<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t211.4.605c6'>佛告承相： 「若使越祇國人持一法者，尚不可攻。 何況盡持如是七法？」</td>
@@ -106,7 +106,7 @@ next: index.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T04n0211_p0605b05" target="_blank">T211.4.605b5-c16</a>. The verse included in this story is parallel to verse 25 in Chapter 36 of the Chinese <cite>Dharmapāda</cite> (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T04n0210_p0573c11" target="_blank">T210.4.573c11</a>). It does not appear to have a direct parallel in the other Dharmapāda collections.</p>
-<p>The story for this verse is a simpler version of the introduction to (most versions of) the <cite>Parinirvāṇa Sūtra</cite> (cf. <a href="https://suttacentral.net/dn16" target="_blank">DN 16</a>, <a href="../../01_agama/dirgha/DA_2.html" target="_blank">DĀ 2</a>, <a href="https://suttacentral.net/t5" target="_blank">T5</a>, <a href="https://suttacentral.net/t6" target="_blank">T6</a>, <a href="https://suttacentral.net/t7" target="_blank">T7</a>, T1451, and the <a href="https://suttacentral.net/sf245" target="_blank">Sanskrit edition</a>). It would appear to be a direct parallel to <a href="https://suttacentral.net/an7.22" target="_blank">AN 7.22</a>, <a href="../../01_agama/madhyama/MA_142.html" target="_blank">MĀ 142</a>, and <a href="../../01_agama/ekottarika/40/EA_40_02.html" target="_blank">EĀ 40.2</a>.</p>
+<p>The story for this verse is a simpler version of the introduction to (most versions of) the <cite>Parinirvāṇa Sūtra</cite> (cf. <a href="https://suttacentral.net/dn16" target="_blank">DN 16</a>, <a href="../../../01_agama/dirgha/DA_2.html" target="_blank">DĀ 2</a>, <a href="https://suttacentral.net/t5" target="_blank">T5</a>, <a href="https://suttacentral.net/t6" target="_blank">T6</a>, <a href="https://suttacentral.net/t7" target="_blank">T7</a>, T1451, and the <a href="https://suttacentral.net/sf245" target="_blank">Sanskrit edition</a>). It would appear to be a direct parallel to <a href="https://suttacentral.net/an7.22" target="_blank">AN 7.22</a>, <a href="../../../01_agama/madhyama/MA_142.html" target="_blank">MĀ 142</a>, and <a href="../../../01_agama/ekottarika/40/EA_40_02.html" target="_blank">EĀ 40.2</a>.</p>
 <p>Compared to the other versions, this story is much shorter and possibly abbeviated. Like AN 7.22, it includes only the seven ways to be unconquerable that were taught to the Vṛji people in the other accounts. Here, the Buddha describes the practices of Vṛji that make them impossible to conquer. As a result, Ānanda has no role here. Nor is the list of seven practices taught to the monks in the context of the Saṅgha after Varṣākāra’s departure. Only EĀ 40.2 includes a verse conclusion, though the verses there are different than here because they address the teaching given to the monks.</p>
 <p>The final conclusion of this story is remarkably positive. While historians generally accept from other sources that Vṛji was in fact invaded and conquered after a protracted conflict, Ajātaśatru adopts the Vṛji customs in this account. As a result, Vṛji accepts his authority, and the country remains prosperous afterward. This puts Ajātaśatru in the role of a wheel-turning king who conquers the world without the need for warfare. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>a hundred countries.</em> C. <span class="ch">五百國</span>. I’ve adopted an alternate reading that changes this to one hundred countries (<span class="ch">百國</span>). This detail is lacking in the other parallels to this story. Even if we read it as referring to a hundred small tribal chiefdoms, it sounds like an exaggeration. Magadha is depicted here as a large empire, when it was only a emerging kingdom at the time of the Buddha. [<a href="#ref2">back</a>]</p></li>
